[package]
name = "cosy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
# ash = {git = "https://github.com/neurotok/ash.git", default-features = false, features = ["linked", "debug"] }
ash = {path = "../ash/ash", default-features = false, features = ["linked", "debug"] }
# ash = {version = "0.37.2", default-features = false, features = ["linked", "debug"] }
# ash-window = "0.12.0"
ash-window = {path = "../ash/ash-window"}
mp4parse = "0.12.0"
raw-window-handle = "0.5.0"
winit = "0.27.5"
